# Co-Research23-DfX

./: README.md
catkin_ws/devel/: local_setup.sh  setup.sh
catkin_ws/devel/include/kanu_pkg/: DistServiceMessage.h  DistServiceMessageRequest.h  DistServiceMessageResponse.h  MarkerInfo.h  Marker_info.h  Markers.h
catkin_ws/devel/lib/dynamixel_sdk_examples/: bulk_read_write_node  indirect_address_node  read_write_node  sync_read_write_node
catkin_ws/devel/lib/pkgconfig/: ar_track_alvar_msgs.pc  aruco.pc  dynamixel_sdk.pc  dynamixel_sdk_examples.pc  eigen_conversions.pc  kanu_pkg.pc  kdl_conversions.pc  realsense2_description.pc  ros_tutorials_topic.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc  test_tf2.pc  tf.pc  tf2.pc  tf2_bullet.pc  tf2_eigen.pc  tf2_geometry_msgs.pc  tf2_kdl.pc  tf2_msgs.pc  tf2_py.pc  tf2_ros.pc  tf2_sensor_msgs.pc  tf2_tools.pc  tf_conversions.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_msgs.pc  (+3 more)
catkin_ws/devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
catkin_ws/devel/lib/tf2_ros/: buffer_server  static_transform_publisher
catkin_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
catkin_ws/devel/lib/turtlebot3_slam/: flat_world_imu_node
catkin_ws/devel/share/ar_track_alvar_msgs/cmake/: ar_track_alvar_msgs-msg-paths.cmake  ar_track_alvar_msgsConfig.cmake
catkin_ws/src/parking/: CMakeLists.txt  package.xml
catkin_ws/src/parking/launch/: imu_test.launch  parking.launch
catkin_ws/src/parking/msg/: MarkerInfo.msg  Markers.msg
catkin_ws/src/parking/scripts/: imu.py  move2frontMarker.py  move2marker.py  move2marker_modify.py  move_test.py  straight_parking.py
catkin_ws/src/parking/srv/: DistServiceMessage.srv
(+86 files in other folders)
